[package]
name = "webpage-dumper-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
url = "2.2.2"
reqwest = "0.11.18"
scraper = "0.17.1"
futures = "0.3.28"
anyhow = "1.0.71"
tokio = { versopm = "1.28.2", features = ["full"] }
regex = "1.10.0"